--- a/layout/styles.css
+++ b/layout/styles.css
@@ -134,3 +134,12 @@
   .news-text {
     font-weight: 300;
   }
+
+  a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
