--- a/layout/styles.css
+++ b/layout/styles.css
@@ -135,7 +135,7 @@
     font-weight: 300;
   }
 
-  a:link, a:visited {
+  .a {
     background-color: #f44336;
     color: white;
     padding: 14px 25px;
