--- a/layout/styles.css
+++ b/layout/styles.css
@@ -136,8 +136,7 @@
   }
 
   .a {
-    background-color: #f44336;
-    color: white;
+    color: #1a329c;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
