--- a/layout/styles.css
+++ b/layout/styles.css
@@ -79,7 +79,7 @@
   img.article-image {
     width: 100%;
     height: auto;
-    padding: 0%;
+    padding: 0px;
   }
   
   .portfolio-max-width {
