--- a/ISMRM 2022-3102_files/MasterStyles.css
+++ b/ISMRM 2022-3102_files/MasterStyles.css
@@ -45,11 +45,11 @@ textarea
 
 .InsertEquation
 {
-   background-image: url(../images/copy.gif)  !important;
+   background-image: url(../assets/images/copy.gif)  !important;
 }
 .InsertInlineEquation
 {
-   background-image: url(../images/copy.gif)  !important;
+   background-image: url(../assets/images/copy.gif)  !important;
 }
    
 .row {
