--- a/layout/styles.css
+++ b/layout/styles.css
@@ -1,6 +1,6 @@
 .portfolio-header {
   position: relative;
-  background-image: url(../images/header-bg.jpg);
+  background-image: url(../assets/images/header-bg.jpg);
 }
 
 .portfolio-header .mdl-layout__header-row {
